--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </div>
 
 <div id="code">
-  <div id="edit"> // GRAPHING CALCULATOR by PAVAN KALYAN DONTHU
+  <div id="edit"> // Dedicated to Department of Chemistry, IIT Kharagpur.
 graph.add(function(x) { return x*x; });
 
 </div>
